--- a/components/qvbbzdnw0-python/overlays/development/deployment-patch.yaml
+++ b/components/qvbbzdnw0-python/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: qvbbzdnw0-python
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-f1e0c8e6b1.8364.p3.openshiftapps.com/rhtap/rhtap-qe:0716f5115a051e31f23da1ca592e3f6a840cfa41@sha256:9759e195fc12cfa536fd774f5e1d14a9574351fdce83d5bf635411eb0e79d9b0
+          name: container-image
